--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
         <nav class="toph"></nav>
     </header>
     <section class="hero">
-        <h1 id="javascript_message"></h1>
-        <p id="javascript_message2"></p>
+        <h1>Welcome to the Hangman game</h1>
     </section>
     <main>
-        
         <div class="homediv">
                 <div class="HangmanDiv">
                     <h1 id="gameOver">Game Over</h1>
