--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
     <section class="hero">
         <h1>Welcome to the Hangman game</h1>
+        <h1>By Gustavo and Gabriel Lebre</h1>
     </section>
     <main>
         <div class="homediv">
