adding href to dice game

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <section class="hero">
         <h1>Welcome to the Hangman game</h1>
         <h1>By Gustavo and Gabriel Lebre</h1>
+        <a href="https://nousxgii.github.io/COMP-2132-Dice-Game/">Play Dice Game</a>
     </section>
     <main>
         <div class="homediv">
